@@ -273,10 +273,9 @@ public class PumpStreamHandler implements ExecuteStreamHandler {
      */
     protected Thread createPump(InputStream is, OutputStream os,
                                 boolean closeWhenExhausted, boolean nonBlockingIO) {
-        final Thread result
-            = new ThreadWithPumper(new StreamPumper(is, os,
-                                                    closeWhenExhausted,
-                                                    nonBlockingIO));
+        StreamPumper pumper = new StreamPumper(is, os, closeWhenExhausted, nonBlockingIO);
+        pumper.setAutoflush(true);
+        final Thread result = new ThreadWithPumper(pumper);
         result.setDaemon(true);
         return result;
     }
